# Software

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  CMakelists.txt  LICENSE  README.md  boards.txt  package_RiscDuinoV_index.json  platform.txt
cores/riscduinov/: Arduino.h  CMakeLists.txt  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  SrcWrapper.c  SrcWrapper.h  main.cpp  src_wrapper.c  wiring.c  wiring.h  wiring_digital.c  wiring_private.h
cores/riscduinov/riscv/: start.S
cores/xtrduino/: Arduino.h  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Print.h  Stream.h  WMath.cpp  WString.cpp  WString.h  main.cpp  wiring.c  wiring.h  wiring_digital.c
libraries/SPI/src/: SPI.cpp  SPI.h
libraries/Wire/src/: Wire.cpp  Wire.h
projects/: README.md
projects/FreeRTOS_template/: CMakeLists.txt
projects/FreeRTOS_template/FreeRTOSKernel/: .gitignore  CMakeLists.txt
projects/FreeRTOS_template/inc/: FreeRTOSConfig.h
projects/FreeRTOS_template/src/: CMakeLists.txt  main.c
projects/Project_template/: CMakeLists.txt
projects/Project_template/inc/: sum.h
projects/Project_template/lib/: CMakeLists.txt  sum.c
projects/Project_template/src/: CMakeLists.txt  main.c
projects/bootloader/: CMakeLists.txt
projects/bootloader/src/: CMakeLists.txt  flash.c  flash.h  main.c
system/include/: pwm.h
system/include/dev/: gpio.h  i2c.h  interrupt_controller.h  io.h  sio.h  spi.h
system/include/riscv/: csr.h  io.h  mtime.h
system/linker_scripts/: link_bootloader.ld  link_freertos.ld  link_user.ld  linker_script.ld
system/src/: CMakeLists.txt  gpio.c  i2c.c  interrupt_controller.c  sio.c  sio_baud.c  spi.c  syscall.c  sysmem.c
system/src/riscv/: mtime.c  start copy.S  start.S  start_FreeRTOS.S  start_FreeRTOS.S.old
tmp/: WCharacter.h  WString.h
tools/: README.md
tools/cmake/: Options.cmake  Toolchain_Script.cmake
